--- a/Lesson2.html
+++ b/Lesson2.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Что нужно знать, чтобы делать сайты</title>
+    <style>
+        {
+            body width: 800;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
     <h1>Что нужно знать, чтобы делать сайты</h1>
