--- a/Lesson2.html
+++ b/Lesson2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Что нужно знать, чтобы делать сайты</title>
     <style>
-        {
-            body width: 800;
+        body{
+            width: 800;
             margin: auto;
         }
     </style>
