--- a/Lesson2.html
+++ b/Lesson2.html
@@ -5,7 +5,7 @@
     <title>Что нужно знать, чтобы делать сайты</title>
     <style>
         body{
-            width: 800;
+            width: 800pt ;
             margin: auto;
         }
     </style>
@@ -25,7 +25,7 @@
     </ol>
 
     <h2>PHP и JavaScript</h2>
-    <a>Языки программирования <a href="https://php.net" target=" blank"<strong>PHP</strong></a> и <storng>JavaScript</storng> позволяют сделать сайт
+        <p>Языки программирования <a> href="https://php.net" target=" blank" <strong>PHP</strong></a> и <storng>JavaScript</storng> позволяют сделать сайт
         динамичным, то есть реагирующим на действия пользователя.
         Например, можно сделать красивую выпадающую менюшку или слайдер</p>
 
