--- a/Page2.html
+++ b/Page2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     page2
-    <a href="http://localhost:63342/PHPSkillUP-Lessons/Lesson2.html?_ijt=mvp5er213f60hbecqhhpm2lf97" <strong>page1</strong>></a>
+    <p><a href="Lesson2.html"> <strong>page1</strong></a></p>
 
 </body>
 </html>
