--- a/Page2.html
+++ b/Page2.html
@@ -7,6 +7,7 @@
 <body>
     page2
     <p><a href="Lesson2.html"> <strong>page1</strong></a></p>
+    <p><a href="fold/Page3.html" <em>page3</em></p>
 
 </body>
 </html>
