--- a/HTML Forms.html
+++ b/HTML Forms.html
@@ -10,6 +10,7 @@
             position: relative;
             line-height: 2em;
         }
+
         label input{
             position:absolute;
             left: 200px;
@@ -20,6 +21,11 @@
         }
         label.checkbox input{
             position: static;
+        }
+        label.textarea textarea{
+            width: 400px;
+            height: 4em;
+            resize: none;
         }
     </style>
 </head>
@@ -52,7 +58,7 @@
                 </select>
         </label>
 
-        <label>
+        <label class="textarea">
             О себе:
             <textarea name="about"></textarea>
         </label>
