--- a/HTML Forms.html
+++ b/HTML Forms.html
@@ -3,31 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>HTML Form</title>
-    <style>
-        label{
-            display: block;
-            width: 300px;
-            position: relative;
-            line-height: 2em;
-        }
-
-        label input{
-            position:absolute;
-            left: 200px;
-            top: 5px;
-        }
-        label.checkbox{
-            padding-left: 195px;
-        }
-        label.checkbox input{
-            position: static;
-        }
-        label.textarea textarea{
-            width: 400px;
-            height: 4em;
-            resize: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
 
@@ -35,26 +11,32 @@
     <!-- Action отправляет данные на страницу которую указываешь
          method get - данные которые передаются идут в адрессную строку (имеет ограничение по размеру)
          method post - данные которые передают идут в теле запроса (скрытая реализация)
-         <label for="name"> Имя: </label> <input id="name" name="name">
-         <label> E-mail:  <input type="email" name="email"></labeL>
+         <label for="name"> Имя: </label> <input id="name" name="name"> связывание лейбл с инпутом
+         <label> E-mail:  <input type="email" name="email"></labeL>  связывание лейбл с инпутом
+         required - поле обязательное для заполнения
+         placeholder - текст в поле пока не начали вводить
+         checkbox - форма с галочкой
+         radio - один из вариантов (должен иметь имя)
+         l
 
      -->
-        <label for="name"> Имя: <input id="name" name="name"> </label>
-        <label> E-mail:  <input type="email" name="email"></labeL>
+        <label for="name"> Имя: <input id="name" name="name" placeholder="Введите ваше имя"> </label>
+        <label> E-mail:  <input type="email" name="email" required value="no@mail.com"></labeL>
         <label for="password"> Password: <input type="password" id="password" name="password"></label>
         <label> Возраст: <input type="number" min="1" max="10" step="3"></label><br>
         <label> Дата рождения <input type="date" name="dob"></label>
-        <label class="checkbox"> <input type="checkbox" name="notification"> Получать уведомления:</label>
-        <label class="checkbox"> <input type="radio" name="period" value="1"> каждый день </label>
+        <label class="checkbox"> <input type="checkbox" name="notification" required checked> Получать уведомления:</label>
+        <label class="checkbox"> <input type="radio" name="period" value="1" checked> каждый день </label>
         <label class="checkbox"> <input type="radio" name="period" value="2"> раз в неделю</label>
         <label class="checkbox"> <input type="radio" name="period" value="3"> раз в месяц </label>
 
         <label>
             Ваш город :
-                <select name="city">
+                <select name="city" required>
+                    <option></option>
                     <option value="1">Днепр</option>
                     <option value="2">Харьков</option>
-                    <option value="3">Киев</option>
+                    <option value="3" selected>Киев</option>
                 </select>
         </label>
 
